syntax = "proto3";

package recipes;
option go_package = "recipes;recipes";

message Error {
    int64 error_code = 1;
    string error_str = 2;
}

message Recipe {
    message ID {
        string recipe_id = 1;
        int64 owner_id = 2;
    }
    
    message Info {
        message Desc {
            string title = 1;
            string description = 2;
        }

        message Ingredient {
            string name = 1;
            double value = 2;
            string measure = 3;
        }

        Desc desc = 1;
        repeated Ingredient ingredients = 2;
    }

    ID id = 1;
    Info info = 2;
}

message GetRecipeRequest {
    Recipe.ID recipe_id = 1;
}

message DeleteRecipeRequest {
    Recipe.ID recipe_id = 1;
}

message PostRecipeRequest {
    Recipe.Info info = 1;
}

message RecipeResponse {
    Recipe recipe = 1;
    Error error = 2;
}

service Recipes {
    rpc GetRecipe (GetRecipeRequest) returns (RecipeResponse);
    rpc DeleteRecipe (DeleteRecipeRequest) returns (Error);
    rpc PostRecipe (PostRecipeRequest) returns (RecipeResponse);
}